TFP-5680 Opprette VK-oppgave for identifisert overlapp med sykepenger (#6252)
* TFP-5680 Opprette VK-oppgave for identifisert overlapp med sykepenger

* TFP-5680 Disable test som tester at det opprettes vk-oppgave ved overlapp sykepenger. Mock må opprettes - gjøres senere