@@ -16,6 +16,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import no.nav.foreldrepenger.produksjonsstyring.oppgavebehandling.OppgaveTjeneste;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -87,6 +89,8 @@ class VedtaksHendelseHåndtererTest extends EntityManagerAwareTest {
     private BeregningsresultatRepository beregningsresultatRepository;
     private OverlappVedtakRepository overlappInfotrygdRepository;
     private BehandlingRepositoryProvider repositoryProvider;
+    @Mock
+    private OppgaveTjeneste oppgaveTjenesteMock;
     private static final int DAGSATS = 442;
 
     @BeforeEach
@@ -99,7 +103,7 @@ class VedtaksHendelseHåndtererTest extends EntityManagerAwareTest {
             new SøknadRepository(getEntityManager(), behandlingRepository), null);
         var overlappTjeneste = new LoggOverlappEksterneYtelserTjeneste(beregningTjeneste, beregningsresultatRepository, null,
             null, null, null, null,
-            overlappInfotrygdRepository, behandlingRepository);
+            overlappInfotrygdRepository, behandlingRepository, oppgaveTjenesteMock);
         lenient().when(mottakRepository.hendelseErNy(any())).thenReturn(true);
         vedtaksHendelseHåndterer = new VedtaksHendelseHåndterer(fagsakTjeneste, beregningsresultatRepository, behandlingRepository, overlappTjeneste,
             taskTjeneste, mottakRepository);
@@ -144,9 +148,9 @@ class VedtaksHendelseHåndtererTest extends EntityManagerAwareTest {
 
         var behandlingOverlappInfotrygd = overlappInfotrygdRepository.hentForSaksnummer(svp.getFagsak().getSaksnummer());
         assertThat(behandlingOverlappInfotrygd).hasSize(1);
-        assertThat(behandlingOverlappInfotrygd.get(0).getBehandlingId()).isEqualTo(svp.getId());
-        assertThat(behandlingOverlappInfotrygd.get(0).getUtbetalingsprosent()).isEqualTo(200);
-        assertThat(behandlingOverlappInfotrygd.get(0).getPeriode()).isEqualTo(
+        assertThat(behandlingOverlappInfotrygd.getFirst().getBehandlingId()).isEqualTo(svp.getId());
+        assertThat(behandlingOverlappInfotrygd.getFirst().getUtbetalingsprosent()).isEqualTo(200);
+        assertThat(behandlingOverlappInfotrygd.getFirst().getPeriode()).isEqualTo(
                 ÅpenDatoIntervallEntitet.fraOgMedTilOgMed(LocalDate.parse("2020-05-01"), LocalDate.parse("2020-05-04")));
     }
 
@@ -191,9 +195,9 @@ class VedtaksHendelseHåndtererTest extends EntityManagerAwareTest {
 
         var behandlingOverlappInfotrygd = overlappInfotrygdRepository.hentForSaksnummer(svp.getFagsak().getSaksnummer());
         assertThat(behandlingOverlappInfotrygd).hasSize(1);
-        assertThat(behandlingOverlappInfotrygd.get(0).getBehandlingId()).isEqualTo(svp.getId());
-        assertThat(behandlingOverlappInfotrygd.get(0).getUtbetalingsprosent()).isEqualTo(120);
-        assertThat(behandlingOverlappInfotrygd.get(0).getPeriode()).isEqualTo(
+        assertThat(behandlingOverlappInfotrygd.getFirst().getBehandlingId()).isEqualTo(svp.getId());
+        assertThat(behandlingOverlappInfotrygd.getFirst().getUtbetalingsprosent()).isEqualTo(120);
+        assertThat(behandlingOverlappInfotrygd.getFirst().getPeriode()).isEqualTo(
             ÅpenDatoIntervallEntitet.fraOgMedTilOgMed(LocalDate.parse("2020-05-01"), LocalDate.parse("2020-05-04")));
     }
 
@@ -235,7 +239,7 @@ class VedtaksHendelseHåndtererTest extends EntityManagerAwareTest {
 
         assertThat(prosessTaskDataList.size()).isEqualTo(1);
 
-        var task = prosessTaskDataList.get(0);
+        var task = prosessTaskDataList.getFirst();
         assertThat(task.taskType()).isEqualTo(TaskType.forProsessTask(HåndterOverlappPleiepengerTask.class));
         assertThat(task.getAktørId()).isEqualTo(aktørFra(fpBehandling).getVerdi());
         assertThat(task.getFagsakId()).isEqualTo(fpBehandling.getFagsak().getId());
